feat: enhance flight search functionality to include date filtering and additional flight details in response DTO